--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^0.5.0+1
-  firebase_analytics: ^6.0.2
-  cloud_firestore: ^0.14.1
+  firebase_core: ^1.0.1
+  firebase_analytics: ^7.1.1
+  cloud_firestore: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
