--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_core: ^1.0.1
   firebase_analytics: ^7.1.1
   cloud_firestore: ^1.0.1
+  firebase_auth: ^1.0.1
+  flutter_signin_button: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
